--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 */credentials.json
 
 # ignore all jupyter notebooks
-*/.ipynb
+*.ipynb
+**/*.ipynb
 
-# ignore hidden files, except for gitignore
-*/.*
+# ignore all hidden files and directories
+.*
 !.gitignore
+**/.*
