Docker containerisation and deployment scriptdone

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,44 @@
-# ignore all credentials files
-*/credentials.json
+# Environment variables
+.env
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Credentials
+telegram-bot/credentials.json
 
 # ignore all jupyter notebooks
 *.ipynb
@@ -7,5 +46,4 @@
 
 # ignore all hidden files and directories
 .*
-!.gitignore
 **/.*
