refactor: move bot to src/, add repositories and utils; switch models to dataclasses; improve date parsing; extract commands; update Dockerfile and add .dockerignore; fix settings imports

--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,8 @@ ENV/
 .DS_Store
 Thumbs.db
 
-# Credentials
-telegram-bot/credentials.json
+# Credentials in all subdirectories
+*/**/credentials.json
 
 # ignore all jupyter notebooks
 *.ipynb
