--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ SQLAlchemy==2.0.23
 # Date and time handling
 python-dateutil>=2.8.2
 pytz>=2023.3
+dateparser>=1.2.0
 
 # Utility packages
 typing-extensions>=4.5.0 
